# SBTi-finance-tool-api

./: .dockerignore  Dockerfile  README.md  docker-compose-ui-dev.yml  docker-compose-ui.yml  docker-compose.yml  docker-compose_aws_example.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
app/: app_server.py  config.json  config.py  dependencies.py  main.py
app/data/: input_format.xlsx
app/routers/: coverage.py  health.py  providers.py  temperature.py  upload.py  whatif.py
app/schemas/: common.py  coverage.py  temperature.py  upload.py  whatif.py
app/uploads/: .gitignore
config/: flask-site-nginx.conf  supervisord.conf
tests/: conftest.py  test_coverage.py  test_health.py  test_providers.py  test_temperature.py  test_upload.py  test_whatif.py
